cluster/kafka/deployments/deployment-debug.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debug
  labels:
    app: kafka
    type: debug
spec:
  template:
    metadata:
      name: debug
      labels:
        app: kafka
        type: debug
    spec:
      containers:
        - name: debug
          image: alpine:latest
  replicas: 1
  selector:
    matchLabels:
      type: debug
