cluster/kafka/deployments/deployment-kafka.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka-deployment
spec:
  selector:
    matchLabels:
      app: kafka-broker
  serviceName: kafka
  replicas: 1
  podManagementPolicy: OrderedReady
  template:
    metadata:
      labels:
        app: kafka-broker # has to match .spec.selector.matchLabels
    spec:
      containers:
      - name: kafka
        image: wurstmeister/kafka:2.11-2.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9092
          name: plaintext
        - containerPort: 9999
          name: jmx
