cluster/kafka/deployments/deployment-producer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer
  labels:
    app: kafka
    type: producer
spec:
  template:
    metadata:
      name: producer-pod
      labels:
        app: kafka
        type: producer
    spec:
      containers:
      - name: producer
        image: producer:latest
        imagePullPolicy: Never
  replicas: 1
  selector:
    matchLabels:
      type: producer
