cluster/kafka/deployments/service-kafka.yml
apiVersion: v1
kind: Service
metadata:
  name: kafkaa
  labels:
    app: kafkaa
spec:
  ports:
  - port: 9092
    name: plaintext
  - port: 9999
    name: jmx
    #clusterIP: None
  selector:
    app: kafkaa
